--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <body>
   <h1>4leaf6</h1>
 <div id=introduction>
-  <h3>History</h3>
-  <h3>About</h3></div>
+  <ul>
+  <li>History</li>
+  <li>About</li>
+  </ul></div>
 
 
     
