--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <h1>4leaf6</h1>
 <div id=introduction>
   <ul>
-  <li>History</li>
   <li>About</li>
+    <p>Hello World!<br>This is my portfolio, beta version in its barest version.<br>Here you'll find my latest updates.</p>
+  <li>History</li>
   </ul></div>
 
 
