--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div id=introduction>
   <ul>
   <li>About</li>
-    <p>Hello World!<br>This is my portfolio, beta version in its barest version.<br>Here you'll find my latest updates.</p>
+    <p>Hello World!<br>This is my portfolio, work in proress.<br>Here you'll find my latest updates.</p>
   <li>History</li>
   </ul></div>
 
