--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <a href="index.html">Home</a>
   <head><title>4leaf6</title></head>
   <h1>4leaf6</h1>
 <div id=introduction>
