--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <!DOCUTYPE html>
 <html>
-  <body></body>
+   <li>About</li>
+  <body><p>Hello World!<br>This is my portfolio, work in proress.<br>Here you'll find my latest updates.</p></body>
 </html>
