--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
   <a href="index.html">Home</a>
+  <a href="about.html">About</a>
   <head><title>4leaf6</title></head>
   <h1>4leaf6</h1>
 <div id=introduction>
