--- a/about.html
+++ b/about.html
@@ -1,5 +1,8 @@
 <!DOCUTYPE html>
 <html>
-   <li>About</li>
+   <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <head><title>4leaf6</title></head>
+  <h1>4leaf6</h1>
   <body><p>Hello World!<br>This is my portfolio, work in proress.<br>Here you'll find my latest updates.</p></body>
 </html>
