--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <head><title>4leaf6</title></head>
-  <h1>4leaf6</h1>
-<div id=introduction>
-  <ul>
-  <li>History</li>
-  </ul></div>
-
-
-    
-</body>
+  <body>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <head>
+      <title>4leaf6</title>
+    </head>
+    <h1>4leaf6</h1>
+    <br><br><br>
+    <div id="news">
+      <h2>Rate Maker</h2>
+      <h3>C++ Code Snippet</h3>
+        <p></p>
+    </div>
+  </body>
 </html>
