--- a/about.html
+++ b/about.html
@@ -1,8 +1,17 @@
-<!DOCUTYPE html>
+<!DOCTYPE html>
 <html>
-   <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <head><title>4leaf6</title></head>
-  <h1>4leaf6</h1>
-  <body><p>Hello World!<br>This is my portfolio, work in proress.<br>Here you'll find my latest updates.</p></body>
+  <body>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <head>
+      <title>4leaf6</title>
+    </head>
+    <h1>4leaf6</h1>
+    <br><br><br>
+    <div id="news">
+      <h2>About Me</h2>
+      <h3><em>“Education is the most powerful weapon which you can use to change the world."</em>- Nelson Mandela</h3>
+        <p>Hello World!<br>This is my portfolio, work in proress.<br>Here you'll find my latest updates.</p>
+    </div>
+  </body>
 </html>
