--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="news">
       <h2>Rate Maker</h2>
       <h3>C++ Code Snippet</h3>
-        <p></p>
+        <p>Program that calculates a single fare which includes tourist tax and commissions, aimed at simplifying billing process of hotel chains.</p>
     </div>
   </body>
 </html>
