--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>4leaf6</title>
+    <title>Guilherme Feitosa Portfolio</title>
   </head>
   <body>
     <a href="index.html">Home</a>
