--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <a href="about.html">About</a>
-    <h1><a href="index.html">4leaf6</a></h1>
+    <h1><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></h1>
     <br><br><br>
     <div id="news">
       <h2>Rate Maker</h2>
