--- a/about.html
+++ b/about.html
@@ -4,9 +4,8 @@
     <title>Guilherme Feitosa Portfolio</title>
   </head>
   <body>
-    <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <h1>4leaf6</h1>
+    <h1><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></h1>
     <br><br><br>
     <div id="news">
       <h2>About Me</h2>
