--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Guilherme Feitosa Portfolio</title>
+    <title>Guilherme's Portfolio</title>
   </head>
   <body>
-    <a href="about.html">About</a>
+    <div id="start"><a href="about.html">About</a>
     <h1><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></h1>
-    <br><br><br>
-    <div id="news">
+    <br><br><br></div>
+    <div id="face">
       <h2>About Me</h2>
         <p>Hello World!<br>This is my portfolio, work in proress.<br>Here you'll find my latest updates.</p>
     </div>
