--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Guilherme Feitosa Portfolio</title>
+    <title>Guilherme's Portfolio</title>
   </head>
   <body>
-    <a href="about.html">About</a>
+    <div id="start"><a href="about.html">About</a>
     <h1><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></h1>
-    <br><br><br>
-    <div id="news">
+    <br><br><br></div>
+    <div id="face">
       <h2>Rate Maker</h2>
       <h3>C++ Code Snippet</h3>
         <p>Program that calculates a single fare which includes tourist tax and commissions, aimed at simplifying billing process of hotel chains.</p>
