--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <h1><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></h1>
     <br><br><br></div>
     <div id="face">
-      <h2>Rate Maker</h2>
-      <h3>C++ Code Snippet</h3>
-        <p>Program that calculates a single fare which includes tourist tax and commissions, aimed at simplifying billing process of hotel chains.</p>
+      <div id="news">
+        <div id="card">
+        <h2>Rate Maker</h2>
+          <h3>C++ Code Snippet</h3>
+            <p>Program that calculates a single fare which includes tourist tax and commissions, aimed at simplifying billing process of hotel chains.</p>
+        </div>
+      </div>
     </div>
-    
   </body>
 </html>
