--- a/about.html
+++ b/about.html
@@ -8,8 +8,10 @@
     <h1><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></h1>
     <br><br><br></div>
     <div id="face">
-      <h2>About Me</h2>
-        <p>Hello World!<br>This is my portfolio, work in proress.<br>Here you'll find my latest updates.</p>
+      <div id="card">
+        <h2>About Me</h2>
+          <p>Hello World!<br>This is my portfolio, work in proress.<br>Here you'll find my latest updates.</p>
+      </div>
     </div>
   </body>
 </html>
