--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div id="face">
       <div id="news">
         <div id="card">
-        <h2>Rate Maker</h2>
+        <a href="ratemaker.html"><h2>Rate Maker</h2>
           <h3>C++ Code Snippet</h3>
-            <p>Program that calculates a single fare which includes tourist tax and commissions, aimed at simplifying billing process of hotel chains.</p>
+            <p>Program that calculates a single fare which includes tourist tax and commissions, aimed at simplifying billing process of hotel chains.</p></a>
         </div>
       </div>
     </div>
