--- a/about.html
+++ b/about.html
@@ -4,9 +4,14 @@
     <title>Guilherme's Portfolio</title>
   </head>
   <body>
-    <div id="start"><a href="about.html">About</a>
-    <h3><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></h3>
-    <br><br><br></div>
+    <header>
+      <h1><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></h1>
+      <nav>
+        <ul>
+          <li><a href="about.html">About</a></li>
+        </ul> 
+      </nav>
+    </header>
     <div id="face">
       <div id="card">
         <h1>About Me</h1>
