--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
         </ul> 
       </nav>
     </header>
-    <div id="face">
-      <div id="news">
-        <div id="card">
-        <a href="ratemaker.html"><h2>Rate Maker</h2>
-          <h3>C++ Code Snippet</h3>
+    <main>
+      <div id="face">
+        <div id="news">
+          <div id="card">
+            <a href="ratemaker.html"><h2>Rate Maker</h2>
+            <h3>C++ Code Snippet</h3>
             <p>Program that calculates a single fare which includes tourist tax and commissions, aimed at simplifying billing process of hotel chains.</p></a>
+          </div>
         </div>
       </div>
-    </div>
+    </main>
+    
   </body>
 </html>
