--- a/about.html
+++ b/about.html
@@ -12,11 +12,14 @@
         </ul> 
       </nav>
     </header>
-    <div id="face">
-      <div id="card">
-        <h1>About Me</h1>
+    <main>
+      <div id="face">
+        <div id="card">
+          <h1>About Me</h1>
           <p>Hello World!<br>This is my portfolio, work in proress.<br>Here you'll find my latest updates.</p>
+        </div>
       </div>
-    </div>
+    </main>
+    
   </body>
 </html>
