--- a/ratemaker.html
+++ b/ratemaker.html
@@ -12,14 +12,15 @@
         </ul> 
       </nav>
     </header>
-    <div id="face">
-      <div id="product">
-        <h1>Rate Maker</h1>
+    <main>
+      <div id="face">
+        <div id="product">
+          <h1>Rate Maker</h1>
           <h3>C++ Code Snippet</h3>
-            <p><em>Program that calculates a single fare which includes tourist tax and commissions, aimed at simplifying billing process of hotel chains.</em></p>
-              <p>During my days as receptionist in the Algarve region, I faced a situation regarding tourist tax: I would forget charging or simply charge the wrong amount multiple times.<br>That's when I wondered if there wasn't any other simpler way of charging it.</p>
+          <p><em>Program that calculates a single fare which includes tourist tax and commissions, aimed at simplifying billing process of hotel chains.</em></p>
+          <p>During my days as receptionist in the Algarve region, I faced a situation regarding tourist tax: I would forget charging or simply charge the wrong amount multiple times.<br>That's when I wondered if there wasn't any other simpler way of charging it.</p>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
