--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <header>
-      <h1><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></h1>
       <nav>
         <ul>
+          <li><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></li>
           <li><a href="about.html">About</a></li>
         </ul> 
       </nav>
