--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Guilherme's Portfolio</title>
+    <link href='main.css' rel='stylesheet'>
   </head>
   <body>
     <header>
@@ -9,6 +10,7 @@
         <ul>
           <li><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></li>
           <li><a href="about.html">About</a></li>
+          <li></li>
         </ul> 
       </nav>
     </header>
