--- a/ratemaker.html
+++ b/ratemaker.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <title>Guilherme's Portfolio</title>
+    <link href='main.css' rel='stylesheet'>
   </head>
   <body>
     <header>
-      <h1><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></h1>
       <nav>
         <ul>
+          <li><a href="https://4leaf6.github.io/">Guilherme<br>Feitosa</a></li>
           <li><a href="about.html">About</a></li>
+          <li></li>
         </ul> 
       </nav>
     </header>
