--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       <div id="face">
         <div id="card">
           <h1>About Me</h1>
-          <p>Hello World!<br>This is my portfolio, work in proress.<br>Here you'll find my latest updates.</p>
+          <p>Ladies and Gentlemen,<br>Here you'll find my latest updates on my own creations and hobbies.</p>
         </div>
       </div>
     </main>
