--- a/about.html
+++ b/about.html
@@ -18,11 +18,15 @@
     </header>
     <main>
       <div class="content">
-      <p>Ladies and Gentlemen,<br><br>This is a catalogue of Guilherme Feitosa's home production.<br>
-      Born and raised in Rio de Janeiro, sailed the world in search of a meaningul life. I ended up doing computer stuff by chance and now I am very fond of it.<br>
-      Computers and technology were always present in my life since my humble childhood, but I hesitated for many years to go for my own vocation.<br>
-      What finally brought me here? To accept who I am, and what I was born for.<br><br>
-      My interests are: Games, Apps, OS, Cyber Security.<br><br></div>
+      <p>Ladies and Gentlemen,<br><br>This is Guilherme Feitosa's Portfolio.<br>
+      Here you'll the latest on what I've been producing from my laptop at home.<br><br>
+      My interests are: Games, Apps, OS, Cyber Security.<br><br>
+      <ul class="socials">
+        <li><a href="https://github.com/4leaf6">GitHub</a></li>
+        <li><a href="https://www.hackerrank.com/profile/4leaf6">HackerRank</a></li>
+        <li><a href="https://www.linkedin.com/in/developing-better-future/">LinkedIn</a></li>
+      </ul>
+    </div>
     </main>
     <footer>
       <small>
