--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
       Here you'll the latest on what I've been producing from my laptop at home.<br><br>
       My interests are: Games, Apps, OS, Cyber Security.<br><br>
       <ul class="socials">
-        <li><a href="https://github.com/4leaf6">GitHub</a></li>
-        <li><a href="https://www.hackerrank.com/profile/4leaf6">HackerRank</a></li>
-        <li><a href="https://www.linkedin.com/in/developing-better-future/">LinkedIn</a></li>
+        <li><a href="https://github.com/4leaf6" target="_blank">GitHub</a></li>
+        <li><a href="https://www.hackerrank.com/profile/4leaf6" target="_blank">HackerRank</a></li>
+        <li><a href="https://www.linkedin.com/in/developing-better-future/" target="_blank">LinkedIn</a></li>
       </ul>
     </div>
     </main>
