--- a/index.html
+++ b/index.html
@@ -1,15 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
-    <title>Loading Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      font-family: 'Silkscreen', cursive;
+      overflow: auto;
+    }
+
+    body.menu-active {
+      overflow: hidden;
+    }
+
+    #page-content {
+      flex-grow: 1;
+      position: relative;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #page-content h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+
+    #page-content h2 {
+      font-size: 2em;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+
+    #page-content p {
+      font-size: 0.9em;
+      line-height: 1.4;
+      text-align: center;
+      background-color: rgba(245, 245, 220, 0.5);
+      padding: 20px;
+      border-radius: 10px;
+      width: 80%;
+      max-width: 600px;
+      margin: 10px 0;
+      color: black;
+    }
+
+    #page-content li {
+      font-size: 0.9em;
+      line-height: 1.4;
+    }
+
+    nav {
+      position: fixed;
+      bottom: 10px;
+      width: 100%;
+      text-align: center;
+      background-color: transparent;
+      display: flex;
+      justify-content: center;
+      z-index: 4;
+    }
+
+    .nav-button {
+      background-color: #f0f0f0;
+      color: black;
+      border: none;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      cursor: pointer;
+      font-size: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: background-color 0.3s ease;
+      position: relative;
+      z-index: 5;
+      margin: 0 5px;
+    }
+
+    .nav-button:hover {
+      background-color: #d0d0d0;
+    }
+
+    #menu-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: none;
+      z-index: 3;
+    }
+
+    #menu {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 4;
+    }
+
+    #menu.active {
+      display: flex;
+    }
+
+    #menu-overlay.active {
+      display: block;
+    }
+
+    .menu-button {
+      background-color: #f0f0f0;
+      border: none;
+      padding: 8px 16px;
+      margin: 5px;
+      border-radius: 15px;
+      cursor: pointer;
+      font-size: 14px;
+      font-family: 'Silkscreen', cursive;
+      transition: background-color 0.3s ease;
+    }
+
+    .menu-button:hover {
+      background-color: #d0d0d0;
+    }
+
+    #home-button-nav {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 5px;
+      background-color: #f0f0f0;
+      border: none;
+      transition: background-color 0.3s ease;
+      display: none;
+    }
+
+    #home-button-nav.active {
+      display: flex;
+    }
+
+    #home-button-nav:hover {
+      background-color: #d0d0d0;
+    }
+
+    nav div {
+      display: flex;
+    }
+  </style>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-  <div class="img">
-    <img src="loading.gif" alt="Loading Portfolio" />
+
+  <div id="page-content">
+    <h1>New World Builder</h1>
+    <p>Where all perspectives meet.</p>
+    <h2>Projects</h2>
+    <p>Recent personal projects and those produced during job and education applications.</p>
+    <h2>Socials</h2>
+    <ul>
+      <li><a>GitHub</a></li>
+      <li><a>Hackerrank</a></li>
+      <li><a>LinkedIn</a></li>
+    </ul>
+
   </div>
-    
+
+  <nav>
+    <div>
+      <button id="toggleButton" class="nav-button">
+        <span class="material-symbols-outlined">menu</span>
+      </button>
+      <button id="home-button-nav" class="nav-button">
+        <span class="material-symbols-outlined">home</span>
+      </button>
+    </div>
+  </nav>
+
+  <div id="menu-overlay"></div>
+
+  <div id="menu">
+    <button class="menu-button">Piscine</button>
+    <button class="menu-button">Rate Maker</button>
+    <button class="menu-button">Automation test</button>
+    <button class="menu-button">Info</button>
+  </div>
+
+  <script>
+    const toggleButton = document.getElementById('toggleButton');
+    const menu = document.getElementById('menu');
+    const overlay = document.getElementById('menu-overlay');
+    const homeButtonNav = document.getElementById('home-button-nav');
+    const body = document.body;
+
+    toggleButton.addEventListener('click', () => {
+      menu.classList.toggle('active');
+      overlay.classList.toggle('active');
+      body.classList.toggle('menu-active');
+
+      if (menu.classList.contains('active')) {
+        toggleButton.innerHTML = '<span class="material-symbols-outlined">close</span>';
+        homeButtonNav.classList.add('active');
+      } else {
+        toggleButton.innerHTML = '<span class="material-symbols-outlined">menu</span>';
+        homeButtonNav.classList.remove('active');
+      }
+    });
+
+    overlay.addEventListener('click', () => {
+      menu.classList.remove('active');
+      overlay.classList.remove('active');
+      toggleButton.innerHTML = '<span class="material-symbols-outlined">menu</span>';
+      homeButtonNav.classList.remove('active');
+      body.classList.remove('menu-active');
+    });
+  </script>
 </body>
 </html>
