--- a/index.html
+++ b/index.html
@@ -174,15 +174,19 @@
 
   <div id="page-content">
     <h1>New World Builder</h1>
-    <p>Where all perspectives meet.</p>
+    <p>Hello world, welcome to my portfolio!<br />
+      This website is a project itself where I will publish my latest news and projects.<br />
+    </p>
     <h2>Projects</h2>
     <p>Recent personal projects and those produced during job and education applications.</p>
-    <h2>Socials</h2>
-    <ul>
-      <li><a>GitHub</a></li>
-      <li><a>Hackerrank</a></li>
-      <li><a>LinkedIn</a></li>
-    </ul>
+    <div id="footer">
+      <ul>
+        <li><a>GitHub</a></li>
+        <li><a>Hackerrank</a></li>
+        <li><a>LinkedIn</a></li>
+      </ul>
+    </div>
+    
 
   </div>
 
