--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     
     #menu {
       width: 90%; /* Ensure proper scaling for mobile */
-      padding: 20px; /* Add padding around menu content */
+     /* padding: 20px; /* Add padding around menu content */
 /*      }*/
   </style>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
