--- a/index.html
+++ b/index.html
@@ -188,13 +188,11 @@
     <p>Recent personal projects and those produced during job and education applications.</p>
     <div id="footer">
       <ul>
-        <li><a>GitHub</a></li>
-        <li><a>Hackerrank</a></li>
-        <li><a>LinkedIn</a></li>
+        <li><a href="https://github.com/4leaf6" target="_blank">GitHub</a></li>
+        <li><a href="https://www.hackerrank.com/dashboard" target="_blank">Hackerrank</a></li>
+        <li><a href="https://www.linkedin.com/in/developing-better-future/" target="_blank">LinkedIn</a></li>
       </ul>
     </div>
-    
-
   </div>
 
   <nav>
