--- a/info.html
+++ b/info.html
@@ -180,12 +180,14 @@
 <body>
 
   <div id="page-content">
-    <h1>New World Builder</h1>
-    <p>Hello world, welcome to my portfolio!<br />
-      This is my personal website where I publish my latest news and projects.<br />
-    </p>
-    <h2>Projects</h2>
-    <p>Recent personal projects and those produced during job and education applications.</p>
+    <h1>Info</h1>
+    <div id="summary"></div>
+    <p>Hello everyone, I'm Guilherme Feitosa<br />
+      this is my time line so far.<br />
+    </p></div>
+    <div id="work exp">
+        <p>This is my work experience.</p>
+    </div>
     <div id="footer">
       <ul>
         <li><a href="https://github.com/4leaf6" target="_blank">GitHub</a></li>
