--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
   <div id="page-content">
     <h1>New World Builder</h1>
     <p>Hello world, welcome to my portfolio!<br />
-      This is my personal website where I publish my latest news and projects.<br />
-    </p>
+      This is my personal website where I publish my latest news and projects.<br /></p>
     <h2>Projects</h2>
     <p>Recent personal projects and those produced during job and education applications.</p>
     <div id="footer">
