--- a/info.html
+++ b/info.html
@@ -179,24 +179,23 @@
 </head>
 <body>
 
-  <div id="page-content">
-    <h1>Info</h1>
-    <div id="summary"></div>
-    <p>Hello everyone, I'm Guilherme Feitosa<br />
-      this is my time line so far.<br />
-    </p></div>
-    <div id="work exp">
-        <p>This is my work experience.</p>
+    <div id="page-content">
+        <h1>Info</h1>
+        <div id="summary">
+            <p>Hello everyone, I'm Guilherme Feitosa<br />
+            this is my time line so far.<br /></p>
+        </div>
+        <div id="work exp">
+            <p>This is my work experience.</p>
+        </div>
+        <div id="footer">
+            <ul>
+                <li><a href="https://github.com/4leaf6" target="_blank">GitHub</a></li>
+                <li><a href="https://www.hackerrank.com/dashboard" target="_blank">Hackerrank</a></li>
+                <li><a href="https://www.linkedin.com/in/developing-better-future/" target="_blank">LinkedIn</a></li>
+            </ul>
+        </div>
     </div>
-    <div id="footer">
-      <ul>
-        <li><a href="https://github.com/4leaf6" target="_blank">GitHub</a></li>
-        <li><a href="https://www.hackerrank.com/dashboard" target="_blank">Hackerrank</a></li>
-        <li><a href="https://www.linkedin.com/in/developing-better-future/" target="_blank">LinkedIn</a></li>
-      </ul>
-    </div>
-  </div>
-
   <nav>
     <div>
       <button id="toggleButton" class="nav-button">
