--- a/info.html
+++ b/info.html
@@ -192,7 +192,7 @@
         <h1>Info</h1>
         <div id="summary">
             <p>Hello everyone,<br />I'm Guilherme Feitosa,<br />
-            this is my time line so far.<br /></p>
+            and this is a bit of myself.<br /></p>
         </div>
         <div id="footer">
             <ul>
