--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
       line-height: 1.4;
     }
 
+    a {
+      text-decoration: none;
+    }
+
     nav {
       position: fixed;
       bottom: 10px;
@@ -185,13 +189,6 @@
       This is my personal website where I publish my latest news and projects.<br /></p>
     <h2>Projects</h2>
     <p>Recent personal projects and those produced during job and education applications.</p>
-    <div id="footer">
-      <ul>
-        <li><a href="https://github.com/4leaf6" target="_blank">GitHub</a></li>
-        <li><a href="https://www.hackerrank.com/dashboard" target="_blank">Hackerrank</a></li>
-        <li><a href="https://www.linkedin.com/in/developing-better-future/" target="_blank">LinkedIn</a></li>
-      </ul>
-    </div>
   </div>
 
   <nav>
