--- a/info.html
+++ b/info.html
@@ -71,6 +71,9 @@
       line-height: 1.4;
     }
 
+    a {
+        text-decoration: none;
+    }
     nav {
       position: fixed;
       bottom: 10px;
@@ -194,7 +197,7 @@
             <p>Hello everyone,<br />I'm Guilherme Feitosa,<br />
             and this is a bit of myself.<br /></p>
         </div>
-        <div id="footer">
+        <div id="side">
             <ul>
                 <li><a href="https://github.com/4leaf6" target="_blank">GitHub</a></li>
                 <li><a href="https://www.hackerrank.com/dashboard" target="_blank">Hackerrank</a></li>
