--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
 
     #page-content h1 {
       font-size: 2.5em;
-      margin-bottom: 10px;
       text-align: center;
+      position: sticky;
+      top: 0;
+      background-color: #fff;
+      z-index: 2;
+      width: 100%;
+      padding: 20px 0;
+      margin: 0;
     }
 
     #page-content h2 {
