--- a/info.html
+++ b/info.html
@@ -24,8 +24,8 @@
 
     #page-content {
           display: grid;
-          grid-template-columns: 1fr 1fr; /* Two columns: 50% each */
-          gap: 20px; /* Horizontal gap between columns */
+          grid-template-columns: 1fr 1fr;
+          gap: 20px;
           width: 100%;
           max-width: 800px;
           margin: 20px auto;
@@ -37,14 +37,20 @@
         
         #vertical-stack {
           display: flex;
-          flex-direction: column; /* Stack vertically */
-          gap: 10px; /* Space between Experience and Education */
+          flex-direction: column;
+          gap: 10px; 
         }
         
     #page-content h1 {
       font-size: 2.5em;
-      margin-bottom: 10px;
       text-align: center;
+      position: sticky;
+      top: 0;
+      background-color: #fff;
+      z-index: 2;
+      width: 100%;
+      padding: 20px 0;
+      margin: 0;
     }
 
     #page-content h2 {
@@ -73,6 +79,10 @@
 
     a {
         text-decoration: none;
+    }
+
+    #side ul {
+        list-style-type: none;
     }
     nav {
       position: fixed;
