--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
 
     a {
       text-decoration: none;
+      color: inherit;
+    }
+
+    .menu-button a, .nav-button a, #side a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .menu-button, .nav-button {
+      color: black;
     }
 
     nav {
